# md5scantest

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  main.cpp  md5.h
fixtures/: test2.txt  test4.txt
